--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "strict": false,
+    "noImplicitReturns": false,
   },
   "files": [
     "src/main.ts",
